# ubuntu

./: .gitattributes  README
git/git/: .gitignore  release.sh
git/gitolite/: gitolite_1.5.4-1ubuntu0.1.dsc  release.sh
php/php52-apc/: .gitignore  php52-apc_3.1.5.orig.tar.bz2  php52-apc_3.1.6.orig.tar.bz2  php52-apc_3.1.7.orig.tar.bz2
php/php52-cairowrapper/: php52-cairowrapper_0.2.4.orig.tar.bz2
php/php52-common/: php52-common_20101129.orig.tar.bz2  release.sh
php/php52-memcache/: php52-memcache_3.0.6.orig.tar.bz2
php/php52-syck/: php52-syck_0.9.3.orig.tar.bz2
php/php52-uuid/: php52-uuid_1.6.2.orig.tar.bz2
php/php52-xdebug/: php52-xdebug_2.1.0.orig.tar.bz2  php52-xdebug_2.1.1.orig.tar.bz2
php/php53-apc/: php53-apc_3.1.5.orig.tar.bz2  php53-apc_3.1.6.orig.tar.bz2  php53-apc_3.1.7.orig.tar.bz2
php/php53-cairowrapper/: php53-cairowrapper_0.2.4.orig.tar.bz2
php/php53-common/: php53-common_20101129.orig.tar.bz2
php/php53-ioncube/: release.sh
php/php53-memcache/: php53-memcache_3.0.6.orig.tar.bz2
php/php53-syck/: php53-syck_0.9.3.orig.tar.bz2
php/php53-uuid/: php53-uuid_1.6.2.orig.tar.bz2  release.sh
php/php53-xdebug/: php53-xdebug_2.1.0.orig.tar.bz2  php53-xdebug_2.1.1.orig.tar.bz2
php52/: .gitignore  release.sh
php52-apc/: php52-apc_3.1.4.orig.tar.bz2
php52-apc/php52-apc-3.1.4/: apc_shm.c  apc_sma.h  apc_stack.h  config.w32  php_apc.c
php52/php52-5.2.14/: configure
php53/: .gitignore  release.sh
php53-apc/: php53-apc_3.1.4.orig.tar.bz2
tools/nginx/: .gitignore  (+1 more)
tools/varnish/varnish-2.1.4/man/: Makefile.am  Makefile.in  vcl.7
(+1627 files in other folders)
